ajustando dash a español carpinteria basica

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,22 +101,23 @@
   <aside class="aside is-placed-left is-expanded">
     <div class="aside-tools">
       <div class="aside-tools-label">
-        <span><b>Admin</b> One HTML</span>
+        <span><b>Administración</b> Olimpo</span>
       </div>
     </div>
     <div class="menu is-menu-main">
       <p class="menu-label">General</p>
       <ul class="menu-list">
         <li>
-          <a href="index.html" class="is-active router-link-active has-icon">
+          <a href="/" class="is-active router-link-active has-icon">
             <span class="icon"><i class="mdi mdi-desktop-mac"></i></span>
             <span class="menu-item-label">Dashboard</span>
           </a>
         </li>
       </ul>
-      <p class="menu-label">Examples</p>
+      <!-- <p class="menu-label">Examples</p> -->
+      <p class="menu-label">Modulos</p>
       <ul class="menu-list">
-        <li>
+        <!-- <li>
           <a href="tables.html" class="has-icon">
             <span class="icon has-update-mark"><i class="mdi mdi-table"></i></span>
             <span class="menu-item-label">Tables</span>
@@ -154,9 +155,40 @@
               </a>
             </li>
           </ul>
+        </li> -->
+        <li>
+          <a class="has-icon has-dropdown-icon">
+            <span class="icon"><i class="mdi mdi-view-list"></i></span>
+            <span class="menu-item-label">Paginas</span>
+            <div class="dropdown-icon">
+              <span class="icon"><i class="mdi mdi-plus"></i></span>
+            </div>
+          </a>
+          <ul>
+            <li>
+              <a href="/">
+                <span>Inicio</span>
+              </a>
+            </li>
+            <li>
+              <a href="/nosotros">
+                <span>Nosotros</span>
+              </a>
+            </li>
+            <li>
+              <a href="/services">
+                <span>Servicios</span>
+              </a>
+            </li>
+            <li>
+              <a href="/contact">
+                <span>Contacto</span>
+              </a>
+            </li>
+          </ul>
         </li>
       </ul>
-      <p class="menu-label">About</p>
+      <!-- <p class="menu-label">About</p>
       <ul class="menu-list">
         <li>
           <a href="https://github.com/vikdiesel/admin-one-bulma-dashboard" target="_blank" class="has-icon">
@@ -170,7 +202,7 @@
             <span class="menu-item-label">About</span>
           </a>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </aside>
   <section class="section is-title-bar">
@@ -183,7 +215,7 @@
           </ul>
         </div>
       </div>
-      <div class="level-right">
+      <!-- <div class="level-right">
         <div class="level-item">
           <div class="buttons is-right">
             <a href="https://github.com/vikdiesel/admin-one-bulma-dashboard" target="_blank" class="button is-primary">
@@ -192,7 +224,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <section class="hero is-hero-bar">
@@ -217,7 +249,7 @@
             <div class="level is-mobile">
               <div class="level-item">
                 <div class="is-widget-label"><h3 class="subtitle is-spaced">
-                  Clients
+                  Clientes
                 </h3>
                   <h1 class="title">
                     512
@@ -239,10 +271,10 @@
             <div class="level is-mobile">
               <div class="level-item">
                 <div class="is-widget-label"><h3 class="subtitle is-spaced">
-                  Sales
+                  Ventas
                 </h3>
                   <h1 class="title">
-                    $7,770
+                    $7'967.740
                   </h1>
                 </div>
               </div>
@@ -261,10 +293,10 @@
             <div class="level is-mobile">
               <div class="level-item">
                 <div class="is-widget-label"><h3 class="subtitle is-spaced">
-                  Performance
+                  Actuación
                 </h3>
                   <h1 class="title">
-                    256%
+                    366%
                   </h1>
                 </div>
               </div>
@@ -618,7 +650,7 @@
   <footer class="footer">
     <div class="container-fluid">
       <div class="level">
-        <div class="level-left">
+        <!-- <div class="level-left">
           <div class="level-item">
             © 2020, JustBoil.me
           </div>
@@ -627,14 +659,14 @@
               <img src="https://img.shields.io/github/v/release/vikdiesel/admin-one-bulma-dashboard?color=%23999">
             </a>
           </div>
-        </div>
-        <div class="level-right">
+        </div> -->
+        <!-- <div class="level-right">
           <div class="level-item">
             <div class="logo">
               <a href="https://justboil.me"><img src="plantilla/demo/img/justboil-logo.svg" alt="JustBoil.me"></a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
