ajustes para modularizacion y sesiones fallido

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
 <h1>Bienvenido, {{ username }} !</h1>
 <!-- Muestra un encabezado de nivel 1 con un mensaje de bienvenida que incluye una variable dinámica {{ username }}. La variable 'username' se pasará desde la vista de Flask y se usará para personalizar el saludo. -->
 
-<h2>Bienvenido a la Página de Inicio</h2>
+<h2>Bienvenido a la Página de Inicio o landing page</h2>
 <!-- Muestra un encabezado de nivel 2 con un mensaje estático. Este título adicional da contexto sobre la página actual y permanece constante. -->
 
-<p>Esta es la página principal de nuestro sitio web.</p>
+<p>Esta es la página principal de nuestro sitio web o landing page.</p>
 <!-- Muestra un párrafo de texto con una descripción estática de la página principal. Proporciona información adicional sobre la página actual. -->
 
 {% endblock %}
